feat(#2903): Add ROS data sink, add new connectors-ros module (#2904)